[package]
name = "sqlite-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"    # error handling
itertools = "0.10.3" # useful iterator extensions
nom = "7.0.0"        # for parsing
peg = "0.7.0"        # for parsing
regex = "1.5.4"      # for parsing
thiserror = "1.0.32" # error handling
